--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 HELP.md
 target/
-!.mvn/wrapper/maven-wrapper.jar
+.mvn/
+src/test/
 !**/src/main/**
-!**/src/test/**
 
 ### STS ###
 .apt_generated
